ncc/testsuite/positive/main.n
// OPTIONS: -main:A.B.C

namespace A {
  namespace B {
    class X {
      public static Main () : void { }
    }
    class C {
      public static Main () : void { }
    }
  }
}
