ncc/testsuite/negative/bug-1196.n
public class Foo {
  public static this() { } //E: access modifiers are not allowed on static constructors
}